# lamf-analysis-sipe

./: CHANGELOG.md  README.md  build_debug_exe.bat  build_env.bat  build_exe.bat  init_build_env.bat  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  test_local_zstack_sort.bat
.github/workflows/: tag_release_publish_exe.yml
integration/: README.md  __init__.py  debug_exe.bat  debug_many_exe.bat  doctester.py  dry_debug_exe.bat  local_zstack_sort.py  test-dask.bat  test-no-dask-parallel-2.bat  test-no-dask-parallel-4.bat  test-no-dask-parallel.bat  test-no-dask.bat  test_integration.py  test_local_zstack_sort.py  test_local_zstack_sort_workflow_mock.py  workflow_integration.py
src/lamf_analysis/: __main__.py
src/lamf_analysis/ophys/: zstack.py
